# ID

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  id_soul.py  idcli.py  mcp-manifest.json  pyproject.toml
api/: id-protocol.mcp.json  id-protocol.openapi.yaml
docs/: AGENTSGEN_INTEGRATION.md  BENCH.md  BENCHMARK.md  COMPATIBILITY.md  CONTEXT_JSON_MAPPING.md  ECOSYSTEM.md  EVALUATOR_PROTOCOL.md  EVIDENCE_POLICY.md  EXAMPLES.md  HARDENING.md  INGEST_SOURCES.md  INTEGRATIONS.md  INTEROP_V1.md  LITE.md  MEASUREMENT.md  MINIMAL_PROFILE.md  OBSERVED_BEHAVIOR.md  OPERATIONS.md  PRIVACY.md  PRIVACY_POLICY_V1.md  PROOF.md  PROTOCOL.md  QUICKSTART.md  README.md  RELEASES.md  ROADMAP.md  SHARE.md  SOUL.md  THREAT_MODEL.md  VALIDATION.md  VERSIONING.md  WHY_ID.md  public-metrics-snippet.md
schemas/: README.md  context-compact-v0.schema.json  interop-v1.schema.json  mcp-context-resource-v1.schema.json  privacy-policy-v1.schema.json  profile-core.schema.json  profile-extended.schema.json
scripts/: benchmark_init_run.py  benchmark_public_report.py  benchmark_report.py  benchmark_trend_report.py  benchmark_validate_run.py  bootstrap_owner.py  build_registry_server_json.py  check_publish_guard.py  cleanup_stuck_jobs.sh  export_context_compact.py  export_interop_v1.py  export_mcp_resource.py  extract_profile.py  generate_metrics_readme.py  idctl_init.py  import_context_compact.py  import_mcp_resource.py  lint_profile_quality.py  migrate.py  privacy_policy.py  publish_mcp_manifest.py  redact_for_sharing.py  run_integration_hook.sh  session_update.py  validate_profile.py  (+5 more)
(+180 files in other folders)
